--- a/src/@components/form-field/form-field.component.html
+++ b/src/@components/form-field/form-field.component.html
@@ -1,4 +1,4 @@
 <div [formGroup]="formGroup">
-  <input placeholder={{placeholder}} [formControlName]="fieldName" type="text" [ngClass]="{ 'g-invalid ng-dirty': isInvalid }">
+  <input placeholder={{placeholder}} [formControlName]="fieldName" type="text">
   <div *ngIf="isInvalid" class="error-message">{{ getErrorMessage }}</div>
 </div>
