--- a/src/app/book/book-review/book-review.component.html
+++ b/src/app/book/book-review/book-review.component.html
@@ -1,11 +1,11 @@
 <ng-container *ngIf="isShowReview">
-  <div class="max-w-lg mx-auto py-4">
+  <div class="wrapper">
     <div class="flex space-x-0">
       <div>
         <div class="w-[300px]">
-          <div class="bg-white p-4 h-auto shadow-md border relative ">
-            <div class="bg-white border w-auto position">
-              <h2 class=" p-2 text-md font-medium mx-auto text-center">{{ bookName | shortenerText: 15 }} Review</h2>
+          <div class="card">
+            <div class="box">
+              <h2 class="title">{{ bookName | shortenerText: 15 }} Review</h2>
             </div>
             <div class="max-h-[321px] overflow-scroll">
               <div *ngFor="let review of reviews">
@@ -13,7 +13,9 @@
                   <div class="font-semibold">{{ review.email | shortenerText: 25 }}</div>
                   <div class="font-normal text-gray-500">{{ review.note | shortenerText: 45 }}</div>
                   <div class="rating">
-                    <span class="star" *ngFor="let i of getRange(review.star)" [ngClass]="{'filled': i <= review.star}">&#9733;</span>
+                    <span class="star" *ngFor="let i of getRange(review.star)" [ngClass]="{'filled': i <= review.star}">
+                      &#9733;
+                    </span>
                   </div>
                 </div>
               </div>
@@ -24,9 +26,9 @@
       <div>
         <div class="w-[290px]">
           <div>
-            <div class="bg-white p-4 h-auto shadow-md border relative">
-              <div class="bg-white border w-auto position">
-                <h2 class=" p-2 text-md font-semibold mx-auto text-center">New Review</h2>
+            <div class="card">
+              <div class="box">
+                <h2 class="title">New Review</h2>
               </div>
               <form [formGroup]="form" class="py-6">
                 <div class="flex flex-col space-y-4">
